--- a/style.css
+++ b/style.css
@@ -578,6 +578,10 @@ h4{
         margin-right: 20px;
     }
 
+    .marseille .lienCards{
+        padding: 0;
+    }
+
     .cardsActivite{
         display: grid;
         grid-template-columns: auto auto auto auto;
