--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ h2{
     margin-bottom: 10px;
 }
 h3{
-    font-size: 0.8em;
+    font-size: 0.75em;
     font-weight: bold;
 }
 span{
@@ -287,6 +287,7 @@ button span{
     margin: 10px 8px;
     text-decoration: none;
     height: 150px;
+    box-shadow: 0 0 10px 8px var(--gris);
 }
 
 .lienCards{
@@ -310,9 +311,10 @@ button span{
 .desc{
     display: flex;
     flex-direction: column;
-    margin-left: 5px;
+    margin-left: 20px;
     flex: 50%;
     margin-top: 10px;
+    padding-right: 15px;
     color: black;
 }
 .note{
@@ -341,7 +343,7 @@ button span{
     padding: 0;
     box-shadow: 0 0 10px 8px var(--gris);
     margin: 15px 20px;
-
+    background-color: white;
 }
 .marseilleCards:hover{
     background-color: var(--back);
@@ -448,21 +450,28 @@ h4{
         align-items: center;
     }
     nav img{
-       margin-right: 40%; 
+        margin-right: auto;
     }
     .inscription{
         order: 4;
-        flex: none;
         margin: 0;
-        text-align: right;
         margin-right: 20px;
         padding-top: 5px;
+        flex:0 0 10%;
     }
     .hebergement, .activite{
         border-bottom: none;
-        flex: none;
-        margin-top: 25px;
+        margin-top: 5px;
         margin-right: 20px;
+        padding-bottom: 0;
+    }
+    .hebergement{
+        flex: 0 0 20%;
+        justify-self: flex-end;
+    }
+    .activite{
+        flex: 0 0 10%;
+        justify-self: flex-end;
     }
     .hebergement :hover, .activite :hover{
         border-top: 2px solid var(--blue);
@@ -497,6 +506,19 @@ h4{
     .lienCards{
         flex: 33%;
     }
+    /*activite*/
+
+    .activiteMarseille{
+        display: flex;
+        flex-flow: row wrap;
+    }
+    .cardsActivite{
+        display: flex;
+        flex-flow: row wrap;
+    }
+    .cardsActivite a{
+        flex: 1 1 33%;
+    }
 
         /*footer*/
     footer{
@@ -511,20 +533,25 @@ h4{
 }
 
 @media (min-width:992px) {
-    .inscription, .hebergement, .activite{
-        flex: 1 1 10%;
+    .hebergements{
+        display: flex;
+        flex-flow: row nowrap;
+    }
+    .hotel{
+        order: 2;
+        border-radius: 18px;
+        flex: 1 1 30%;
+    }
+    .marseille{
+        border: 2px solid transparent;
+        background-color: var(--gris);
+        flex: 1 1 60%;
+        margin-right: 20px;
+        border-radius: 18px;
     }
 }
 @media (min-width: 1330px){
     .page{
         margin: auto;
     }
-    .marseilleCards{
-        margin-right: 50px;
-    }
-    .hebergements{
-        display: flex;
-        justify-content: space-between;
-    }
-
 }
