--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ table {
     --back: #DEEBFF;
     --margin: 20px 8px;
     --gris: rgba(242,242,242,255);
+    --shadow: #e4e4e4;
 }
 /*body*/
 body{
@@ -215,6 +216,8 @@ span .black{
     transition: 1.5s;
 }
 .filtres button{
+    display: flex;
+    align-items: baseline;
     background-color: white;
     border: 2px solid rgba(128, 128, 128, 0.342);
     border-radius: 30px;
@@ -287,7 +290,7 @@ button span{
     margin: 10px 8px;
     text-decoration: none;
     height: 150px;
-    box-shadow: 0 0 10px 8px var(--gris);
+    box-shadow: 0 0 10px 8px var(--shadow);
 }
 
 .lienCards{
@@ -341,7 +344,7 @@ button span{
     border: 5px solid white;
     border-radius: 30px;
     padding: 0;
-    box-shadow: 0 0 10px 8px var(--gris);
+    box-shadow: 0 0 10px 8px var(--shadow);
     margin: 15px 20px;
     background-color: white;
 }
@@ -355,7 +358,7 @@ button span{
     border-top-right-radius: 25px;
     border-top-left-radius: 25px;
     width: 100%;
-    height: 120px;
+    height: 140px;
     object-fit: cover;
 
 }
@@ -389,9 +392,9 @@ button span{
 .activiteCards{
     display: flex;
     flex-flow: column wrap;
-    border-radius: 30px;
+    border-radius: 18px;
     padding: 0;
-    box-shadow: 0 0 8px 5px var(--gris);
+    box-shadow: 0 0 8px 5px var(--shadow);
     margin: 20px 20px;
 }
 .cardsActivite a{
@@ -404,14 +407,14 @@ button span{
 }
 .activitePhoto img{
     border: 0px solid transparent;
-    border-top-right-radius: 25px;
-    border-top-left-radius: 25px;
+    border-top-right-radius: 18px;
+    border-top-left-radius: 18px;
     width: 100%;
-    height: 115px;
+    height: 140px;
     object-fit: cover;
 }
 .activiteDesc{
-    margin: 5px 10px;
+    margin: 5px 20px;
     padding: 10px 0;
 }
 /*footer*/
@@ -533,14 +536,22 @@ h4{
 }
 
 @media (min-width:992px) {
+    .sectionFiltre{
+        display: flex;
+        align-items: baseline;
+    }
     .hebergements{
         display: flex;
         flex-flow: row nowrap;
+        padding-bottom: 30px;
     }
     .hotel{
         order: 2;
         border-radius: 18px;
-        flex: 1 1 30%;
+        flex: 1 1 20%;
+    }
+    .cards{
+          margin-top: 30px;
     }
     .marseille{
         border: 2px solid transparent;
@@ -548,6 +559,46 @@ h4{
         flex: 1 1 60%;
         margin-right: 20px;
         border-radius: 18px;
+        padding: 0 20px;
+    }
+    .vieuxPort .activiteCards .activitePhoto, .calanques .activiteCards .activitePhoto{
+        height: 375px;
+    }
+    .fort .activiteCards .activitePhoto{
+        height: 180px;
+    }
+    .frioul .activiteCards .activitePhoto{
+        height: 120px;
+    }
+    .frioul .activiteCards{
+        margin-top: 42px;
+    }
+    .longchamp .activiteCards .activitePhoto, .dame .activiteCards .activitePhoto{
+        height: 145px;
+    }
+    .activitePhoto img{
+        height: 100%;
+    }
+    .cardsActivite{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
+    }
+    .vieuxPort{
+        grid-area: 1/1/3/2;
+    }
+    .fort{
+        grid-area: 1/2/3/2;
+    }
+    .frioul{
+        grid-area: 2/2/3/3;
+    }
+    .calanques{
+        grid-area: 1/3/4/3;
+    }
+
+    .footer{
+        padding-left: 55px;
     }
 }
 @media (min-width: 1330px){
