--- a/style.css
+++ b/style.css
@@ -460,7 +460,7 @@ h4{
         margin: 0;
         margin-right: 20px;
         padding-top: 5px;
-        flex:0 0 10%;
+        flex:0 1 5%;
     }
     .hebergement, .activite{
         border-bottom: none;
@@ -469,11 +469,11 @@ h4{
         padding-bottom: 0;
     }
     .hebergement{
-        flex: 0 0 20%;
+        flex: 0 1 10%;
         justify-self: flex-end;
     }
     .activite{
-        flex: 0 0 10%;
+        flex: 0 1 10%;
         justify-self: flex-end;
     }
     .hebergement :hover, .activite :hover{
@@ -481,6 +481,10 @@ h4{
         padding-top: 32px;
     }
 
+    .search{
+        border-bottom-left-radius: 0;
+        border-top-left-radius: 0;
+    }
     .search i{
         display: none;
     }
@@ -535,7 +539,14 @@ h4{
     }
 }
 
-@media (min-width:992px) {
+@media (min-width:992px){
+    .hebergement, .activite{
+        margin-right: 0;
+    }
+    .inscription{
+        margin-right: 20px;
+    }
+
     .sectionFiltre{
         display: flex;
         align-items: baseline;
@@ -544,6 +555,7 @@ h4{
         display: flex;
         flex-flow: row nowrap;
         padding-bottom: 30px;
+        margin: 0 20px;
     }
     .hotel{
         order: 2;
@@ -560,6 +572,9 @@ h4{
         margin-right: 20px;
         border-radius: 18px;
         padding: 0 20px;
+    }
+    .activiteMarseille{
+        margin: 0 auto;
     }
     .vieuxPort .activiteCards .activitePhoto, .calanques .activiteCards .activitePhoto{
         height: 375px;
@@ -596,13 +611,12 @@ h4{
     .calanques{
         grid-area: 1/3/4/3;
     }
-
-    .footer{
-        padding-left: 55px;
-    }
 }
 @media (min-width: 1330px){
     .page{
         margin: auto;
+    }
+    .footer{
+        padding-left: 55px;
     }
 }
