--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ button span{
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    border: 7px solid white;
+    border: 7px solid transparent;
     border-radius: 30px;
     background-color: white;
     margin: 10px 8px;
@@ -341,7 +341,7 @@ button span{
 .marseilleCards{
     display: flex;
     flex-flow: column wrap;
-    border: 5px solid white;
+    border: 5px solid transparent;
     border-radius: 30px;
     padding: 0;
     box-shadow: 0 0 10px 8px var(--shadow);
@@ -482,8 +482,8 @@ h4{
     }
 
     .search{
-        border-bottom-left-radius: 0;
-        border-top-left-radius: 0;
+        border-bottom-left-radius: 0px;
+        border-top-left-radius: 0px;
     }
     .search i{
         display: none;
@@ -496,10 +496,6 @@ h4{
     }
     .recherche{
         width: 400px;
-    }
-    .search{
-        border-bottom-left-radius: none;
-        border-top-left-radius: none;
     }
     .marseille{
         display: flex;
@@ -516,7 +512,6 @@ h4{
     /*activite*/
 
     .activiteMarseille{
-        display: flex;
         flex-flow: row wrap;
     }
     .cardsActivite{
@@ -597,10 +592,10 @@ h4{
     .cardsActivite{
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: repeat(4, 1fr);
     }
     .vieuxPort{
-        grid-area: 1/1/3/2;
+        grid-area: 1/1/4/2;
     }
     .fort{
         grid-area: 1/2/3/2;
