--- a/style.css
+++ b/style.css
@@ -572,19 +572,28 @@ h4{
         margin: 0 auto;
     }
     .vieuxPort .activiteCards .activitePhoto, .calanques .activiteCards .activitePhoto{
-        height: 375px;
+        height: 385px;
+    }
+    .vieuxPort, .calanques, .fort, .frioul, .dame, .longchamp{
+        align-self: center;
     }
     .fort .activiteCards .activitePhoto{
         height: 180px;
     }
+    .fort{
+        margin-top: 60px;
+    }
     .frioul .activiteCards .activitePhoto{
         height: 120px;
     }
-    .frioul .activiteCards{
-        margin-top: 42px;
+    .longchamp .activiteCards .activitePhoto{
+        height: 180px;
     }
-    .longchamp .activiteCards .activitePhoto, .dame .activiteCards .activitePhoto{
-        height: 145px;
+    .longchamp{
+        margin-bottom: 70px;
+    }
+    .dame .activiteCards .activitePhoto{
+        height: 120px;
     }
     .activitePhoto img{
         height: 100%;
@@ -592,19 +601,26 @@ h4{
     .cardsActivite{
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        row-gap: 200px;
     }
     .vieuxPort{
         grid-area: 1/1/4/2;
     }
     .fort{
-        grid-area: 1/2/3/2;
+        grid-area: 1/2/3/3;
     }
     .frioul{
-        grid-area: 2/2/3/3;
+        grid-area: 2/2/4/3;
     }
     .calanques{
         grid-area: 1/3/4/3;
+    }
+    .dame{
+        grid-area: 1/4/3/5;
+    }
+    .longchamp{
+        grid-area: 2/4/4/5;
     }
 }
 @media (min-width: 1330px){
