--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ header img{
     text-decoration: none;
     font-weight: bold;
 }
-.hebergement :hover, .hebergement a:link, .activite a:link, .activite :hover{
+.hebergement :hover, .activite :hover{
     color: var(--blue);
     border-bottom-color: var(--blue) ;
 }
